fix alignment on checkboxes that are first in a form

--- a/public/less/admin/admin.less
+++ b/public/less/admin/admin.less
@@ -227,3 +227,7 @@
 .mdl-switch.is-checked .mdl-switch__track {
 	background: lighten(@brand-primary, 20%) !important;
 }
+
+* > .checkbox:first-child {
+	margin-top: 0px;
+}
